SGCL/src/org/gcreator/sgcl/sgclParser.java
// $ANTLR 3.0.1 /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g 2008-07-23 23:19:41

/*
 * Copyright (C) 2007-2008 Luís Reis <luiscubal@gmail.com>
 * Copyright (C) 2007-2008 TGMG <thegamemakerguru@hotmail.com>
 * Copyright (C) 2008 Serge Humphrey <bob@bobtheblueberry.com>
 * 
 * This file is part of G-Creator.
 * G-Creator is free software and comes with ABSOLUTELY NO WARRANTY.
 * See LICENSE for more details.
 */
package org.gcreator.sgcl;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class sgclParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQUAL", "EQUAL2", "GTE", "GT", "LTE", "LT", "NEQUAL", "PLEQUAL", "MIEQUAL", "MUEQUAL", "DIEQUAL", "MOEQUAL", "OR", "AND", "BLKBEG", "BLKEND", "CMTSL", "CMTBEG", "CMTEND", "DCMTB", "DCMTE", "INC", "DEC", "WORD", "TYPE", "INTEGER", "DOUBLE", "FLOAT", "STRING", "CHAR", "ALPHA", "DIGIT", "STRCONTENT", "CHRCONTENT", "WHITESPACE", "LINE", "SLCOMMENT", "MLCOMMENT", "DCOMMENT", "'using'", "'.'", "';'", "'partial'", "'class'", "'extends'", "','", "'static'", "'final'", "'this'", "'('", "')'", "'super'", "'null'", "'continue'", "'break'", "'return'", "'if'", "'else'", "'while'", "'do'", "'for'", "'switch'", "'case'", "':'", "'default'", "'true'", "'false'", "'public'", "'protected'", "'private'"
    };
    public static final int DEC=31;
    public static final int LT=14;
    public static final int MOEQUAL=20;
    public static final int DCOMMENT=47;
    public static final int MOD=8;
    public static final int BLKEND=24;
    public static final int DCMTB=28;
    public static final int STRCONTENT=41;
    public static final int GTE=11;
    public static final int DCMTE=29;
    public static final int CHAR=38;
    public static final int SLCOMMENT=45;
    public static final int PLEQUAL=16;
    public static final int FLOAT=36;
    public static final int AND=22;
    public static final int EOF=-1;
    public static final int LTE=13;
    public static final int TYPE=33;
    public static final int WORD=32;
    public static final int INC=30;
    public static final int BLKBEG=23;
    public static final int CMTEND=27;
    public static final int EQUAL=9;
    public static final int DIEQUAL=19;
    public static final int DOUBLE=35;
    public static final int PLUS=4;
    public static final int DIGIT=40;
    public static final int EQUAL2=10;
    public static final int MLCOMMENT=46;
    public static final int INTEGER=34;
    public static final int NEQUAL=15;
    public static final int CMTBEG=26;
    public static final int CHRCONTENT=42;
    public static final int WHITESPACE=43;
    public static final int MINUS=5;
    public static final int MULT=6;
    public static final int LINE=44;
    public static final int ALPHA=39;
    public static final int MIEQUAL=17;
    public static final int MUEQUAL=18;
    public static final int CMTSL=25;
    public static final int OR=21;
    public static final int GT=12;
    public static final int DIV=7;
    public static final int STRING=37;

        public sgclParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[157+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g"; }



    // $ANTLR start doc
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:73:1: doc : ( extension )* classdef ;
    public final void doc() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:73:5: ( ( extension )* classdef )
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:73:7: ( extension )* classdef
            {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:73:7: ( extension )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==48) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:0:0: extension
            	    {
            	    pushFollow(FOLLOW_extension_in_doc273);
            	    extension();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_classdef_in_doc278);
            classdef();
            _fsp--;
            if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end doc


    // $ANTLR start extension
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:76:1: extension : 'using' WORD ( '.' WORD )* ';' ;
    public final void extension() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:77:2: ( 'using' WORD ( '.' WORD )* ';' )
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:77:4: 'using' WORD ( '.' WORD )* ';'
            {
            match(input,48,FOLLOW_48_in_extension289); if (failed) return ;
            match(input,WORD,FOLLOW_WORD_in_extension291); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:77:17: ( '.' WORD )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==49) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:77:18: '.' WORD
            	    {
            	    match(input,49,FOLLOW_49_in_extension294); if (failed) return ;
            	    match(input,WORD,FOLLOW_WORD_in_extension296); if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,50,FOLLOW_50_in_extension300); if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end extension


    // $ANTLR start classdef
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:1: classdef : ( 'partial' )? 'class' WORD ( 'extends' TYPE ( ',' TYPE )* )? BLKBEG ( clsext )* BLKEND ;
    public final void classdef() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:9: ( ( 'partial' )? 'class' WORD ( 'extends' TYPE ( ',' TYPE )* )? BLKBEG ( clsext )* BLKEND )
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:11: ( 'partial' )? 'class' WORD ( 'extends' TYPE ( ',' TYPE )* )? BLKBEG ( clsext )* BLKEND
            {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:11: ( 'partial' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==51) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:12: 'partial'
                    {
                    match(input,51,FOLLOW_51_in_classdef308); if (failed) return ;

                    }
                    break;

            }

            match(input,52,FOLLOW_52_in_classdef312); if (failed) return ;
            match(input,WORD,FOLLOW_WORD_in_classdef314); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:37: ( 'extends' TYPE ( ',' TYPE )* )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==53) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:38: 'extends' TYPE ( ',' TYPE )*
                    {
                    match(input,53,FOLLOW_53_in_classdef317); if (failed) return ;
                    match(input,TYPE,FOLLOW_TYPE_in_classdef319); if (failed) return ;
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:53: ( ',' TYPE )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==54) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:79:54: ',' TYPE
                    	    {
                    	    match(input,54,FOLLOW_54_in_classdef322); if (failed) return ;
                    	    match(input,TYPE,FOLLOW_TYPE_in_classdef324); if (failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,BLKBEG,FOLLOW_BLKBEG_in_classdef332); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:81:3: ( clsext )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=76 && LA6_0<=78)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:0:0: clsext
            	    {
            	    pushFollow(FOLLOW_clsext_in_classdef336);
            	    clsext();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            match(input,BLKEND,FOLLOW_BLKEND_in_classdef341); if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end classdef


    // $ANTLR start clsext
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:84:1: clsext : ( fieldas | funct | constructor );
    public final void clsext() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:84:8: ( fieldas | funct | constructor )
            int alt7=3;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0>=76 && LA7_0<=78)) ) {
                switch ( input.LA(2) ) {
                case 57:
                    {
                    alt7=3;
                    }
                    break;
                case 55:
                    {
                    switch ( input.LA(3) ) {
                    case 56:
                        {
                        alt7=1;
                        }
                        break;
                    case TYPE:
                        {
                        int LA7_4 = input.LA(4);

                        if ( (LA7_4==WORD) ) {
                            int LA7_7 = input.LA(5);

                            if ( (LA7_7==58) ) {
                                alt7=2;
                            }
                            else if ( (LA7_7==EQUAL||LA7_7==50) ) {
                                alt7=1;
                            }
                            else {
                                if (backtracking>0) {failed=true; return ;}
                                NoViableAltException nvae =
                                    new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 7, input);

                                throw nvae;
                            }
                        }
                        else {
                            if (backtracking>0) {failed=true; return ;}
                            NoViableAltException nvae =
                                new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 4, input);

                            throw nvae;
                        }
                        }
                        break;
                    case WORD:
                        {
                        alt7=2;
                        }
                        break;
                    default:
                        if (backtracking>0) {failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 3, input);

                        throw nvae;
                    }

                    }
                    break;
                case TYPE:
                    {
                    int LA7_4 = input.LA(3);

                    if ( (LA7_4==WORD) ) {
                        int LA7_7 = input.LA(4);

                        if ( (LA7_7==58) ) {
                            alt7=2;
                        }
                        else if ( (LA7_7==EQUAL||LA7_7==50) ) {
                            alt7=1;
                        }
                        else {
                            if (backtracking>0) {failed=true; return ;}
                            NoViableAltException nvae =
                                new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 7, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (backtracking>0) {failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 4, input);

                        throw nvae;
                    }
                    }
                    break;
                case WORD:
                    {
                    alt7=2;
                    }
                    break;
                case 56:
                    {
                    alt7=1;
                    }
                    break;
                default:
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 1, input);

                    throw nvae;
                }

            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("84:1: clsext : ( fieldas | funct | constructor );", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:84:10: fieldas
                    {
                    pushFollow(FOLLOW_fieldas_in_clsext349);
                    fieldas();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:84:20: funct
                    {
                    pushFollow(FOLLOW_funct_in_clsext353);
                    funct();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 3 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:84:28: constructor
                    {
                    pushFollow(FOLLOW_constructor_in_clsext357);
                    constructor();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end clsext


    // $ANTLR start fieldas
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:1: fieldas : privacy ( 'static' )? ( 'final' )? TYPE WORD ( EQUAL value )? ';' ;
    public final void fieldas() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:9: ( privacy ( 'static' )? ( 'final' )? TYPE WORD ( EQUAL value )? ';' )
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:11: privacy ( 'static' )? ( 'final' )? TYPE WORD ( EQUAL value )? ';'
            {
            pushFollow(FOLLOW_privacy_in_fieldas364);
            privacy();
            _fsp--;
            if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:19: ( 'static' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==55) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:0:0: 'static'
                    {
                    match(input,55,FOLLOW_55_in_fieldas366); if (failed) return ;

                    }
                    break;

            }

            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:29: ( 'final' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==56) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:0:0: 'final'
                    {
                    match(input,56,FOLLOW_56_in_fieldas369); if (failed) return ;

                    }
                    break;

            }

            match(input,TYPE,FOLLOW_TYPE_in_fieldas372); if (failed) return ;
            match(input,WORD,FOLLOW_WORD_in_fieldas374); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:48: ( EQUAL value )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==EQUAL) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:85:49: EQUAL value
                    {
                    match(input,EQUAL,FOLLOW_EQUAL_in_fieldas377); if (failed) return ;
                    pushFollow(FOLLOW_value_in_fieldas379);
                    value();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }

            match(input,50,FOLLOW_50_in_fieldas383); if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end fieldas


    // $ANTLR start constructor
    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:86:1: constructor : privacy 'this' '(' ( TYPE WORD ( ',' TYPE WORD )* )? ')' BLKBEG ( ( 'super' | 'this' ) '(' ( value ( ',' value )* )? ')' ';' )? ( statement )* BLKEND ;
    public final void constructor() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:2: ( privacy 'this' '(' ( TYPE WORD ( ',' TYPE WORD )* )? ')' BLKBEG ( ( 'super' | 'this' ) '(' ( value ( ',' value )* )? ')' ';' )? ( statement )* BLKEND )
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:4: privacy 'this' '(' ( TYPE WORD ( ',' TYPE WORD )* )? ')' BLKBEG ( ( 'super' | 'this' ) '(' ( value ( ',' value )* )? ')' ';' )? ( statement )* BLKEND
            {
            pushFollow(FOLLOW_privacy_in_constructor391);
            privacy();
            _fsp--;
            if (failed) return ;
            match(input,57,FOLLOW_57_in_constructor393); if (failed) return ;
            match(input,58,FOLLOW_58_in_constructor395); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:23: ( TYPE WORD ( ',' TYPE WORD )* )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==TYPE) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:24: TYPE WORD ( ',' TYPE WORD )*
                    {
                    match(input,TYPE,FOLLOW_TYPE_in_constructor398); if (failed) return ;
                    match(input,WORD,FOLLOW_WORD_in_constructor400); if (failed) return ;
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:34: ( ',' TYPE WORD )*
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==54) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:87:35: ',' TYPE WORD
                    	    {
                    	    match(input,54,FOLLOW_54_in_constructor403); if (failed) return ;
                    	    match(input,TYPE,FOLLOW_TYPE_in_constructor405); if (failed) return ;
                    	    match(input,WORD,FOLLOW_WORD_in_constructor407); if (failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,59,FOLLOW_59_in_constructor413); if (failed) return ;
            match(input,BLKBEG,FOLLOW_BLKBEG_in_constructor417); if (failed) return ;
            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:3: ( ( 'super' | 'this' ) '(' ( value ( ',' value )* )? ')' ';' )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==57) ) {
                int LA15_1 = input.LA(2);

                if ( (LA15_1==58) ) {
                    alt15=1;
                }
            }
            else if ( (LA15_0==60) ) {
                int LA15_3 = input.LA(2);

                if ( (LA15_3==58) ) {
                    alt15=1;
                }
            }
            switch (alt15) {
                case 1 :
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:4: ( 'super' | 'this' ) '(' ( value ( ',' value )* )? ')' ';'
                    {
                    if ( input.LA(1)==57||input.LA(1)==60 ) {
                        input.consume();
                        errorRecovery=false;failed=false;
                    }
                    else {
                        if (backtracking>0) {failed=true; return ;}
                        MismatchedSetException mse =
                            new MismatchedSetException(null,input);
                        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_constructor422);    throw mse;
                    }

                    match(input,58,FOLLOW_58_in_constructor428); if (failed) return ;
                    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:25: ( value ( ',' value )* )?
                    int alt14=2;
                    int LA14_0 = input.LA(1);

                    if ( (LA14_0==WORD||(LA14_0>=INTEGER && LA14_0<=CHAR)||(LA14_0>=57 && LA14_0<=58)||(LA14_0>=60 && LA14_0<=61)||(LA14_0>=74 && LA14_0<=75)) ) {
                        alt14=1;
                    }
                    switch (alt14) {
                        case 1 :
                            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:26: value ( ',' value )*
                            {
                            pushFollow(FOLLOW_value_in_constructor431);
                            value();
                            _fsp--;
                            if (failed) return ;
                            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:32: ( ',' value )*
                            loop13:
                            do {
                                int alt13=2;
                                int LA13_0 = input.LA(1);

                                if ( (LA13_0==54) ) {
                                    alt13=1;
                                }


                                switch (alt13) {
                            	case 1 :
                            	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:89:33: ',' value
                            	    {
                            	    match(input,54,FOLLOW_54_in_constructor434); if (failed) return ;
                            	    pushFollow(FOLLOW_value_in_constructor436);
                            	    value();
                            	    _fsp--;
                            	    if (failed) return ;

                            	    }
                            	    break;

                            	default :
                            	    break loop13;
                                }
                            } while (true);


                            }
                            break;

                    }

                    match(input,59,FOLLOW_59_in_constructor442); if (failed) return ;
                    match(input,50,FOLLOW_50_in_constructor444); if (failed) return ;

                    }
                    break;

            }

            // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:90:3: ( statement )*
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( ((LA16_0>=WORD && LA16_0<=TYPE)||(LA16_0>=56 && LA16_0<=58)||LA16_0==60||(LA16_0>=62 && LA16_0<=65)||(LA16_0>=67 && LA16_0<=70)) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/SGCL/src/org/gcreator/sgcl/sgcl.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_constructor450);
            	    statement();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop16;
                }
            } while (true);

            match(input,BLKEND,FOLLOW_BLKEND_in_constructor455); if (failed) return ;

            }
